<resources>
<!--    field strings-->
    <string name="app_name" translatable="false">Studentz</string>
    <string name="txt_str_delete">Delete</string>
    <string name="txt_btn_str_gender">Pick Gender</string>
    <string name="txt_str_gender">Gender</string>
    <string name="txt_str_birthdate">Birth Date (format: day/month/year)</string>
    <string name="str_txt_pick">Pick</string>
    <string name="str_txt_education">Pick Education</string>
    <string name="str_txt_classroom">Choose classroom</string>
    <string name="str_txt_email">Email</string>
    <string name="str_txt_address">Address &amp; House number</string>
    <string name="str_txt_location">Location</string>
    <string name="str_txt_zip">ZIP</string>

<!--    education strings-->
    <string name="str_it">IT</string>
    <string name="str_marketing">Marketing</string>
    <string name="str_law">Law</string>
    <string name="str_sciences">Sciences</string>
    <string name="str_economy">Economy</string>

    <string-array name="education">
        <item>@string/str_it</item>
        <item>@string/str_marketing</item>
        <item>@string/str_law</item>
        <item>@string/str_sciences</item>
        <item>@string/str_economy</item>
    </string-array>

<!--    gender strings-->
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>

    <string-array name="gender">
        <item>@string/str_male</item>
        <item>@string/str_female</item>
    </string-array>

<!--    warning string-->
    <string name="str_info_title">Warning: certain values cannot be changed!</string>
    <string name="str_info_body">You cannot change the gender, education and classroom of a student after registering the student, to do this please remove the student and create a new student!</string>

<!--    validation strings-->
    <string name="str_validation_firstname">Please insert a valid first name!</string>
    <string name="str_validation_lastname">Please insert a valid last name!</string>
    <string name="str_validation_birthdate">Please insert a valid birth date!</string>
    <string name="str_validation_email">Please insert a valid email!</string>
    <string name="str_validation_address">Please insert a valid home address and house number!</string>
    <string name="str_validation_location">Please insert a valid location!</string>
    <string name="str_validation_zip">Please insert a valid belgian zip!</string>

    <string name="toast_student_added">Student added!</string>
    <string name="toast_student_updated">Student updated!</string>
    <string name="toast_student_deleted">Student deleted!</string>

    <string name="str_sort_education">Sort on education</string>
    <string name="str_sort_classroom">Sort on classroom</string>
    <string name="str_sort_lastname">Sort on last name(Alphabetical)</string>
    <string name="str_sort_zip">Sort on zip</string>


    <string-array name="classroom">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <string name="title_pref_order">How do you want to sort the students list?</string>

<!--    <string name="title_shop">Shop</string>-->
<!--    <string name="title_gifts">Gifts</string>-->
<!--    <string name="title_cart">Cart</string>-->
<!--    <string name="title_profile">Profile</string>-->
    <string name="str_btn_add">Add</string>
    <string name="str_bottom_students">Students</string>
    <string name="str_bottom_addstudent">Add Student</string>
    <string name="str_bottom_settings">Settings</string>
    <string name="str_firstName">First Name</string>
    <string name="str_lastName">Last Name</string>
    <string name="str_pick_gender">Choose gender</string>
    <string name="str_pick_classroom">Pick Classroom</string>
    <string name="str_pick_education">Pick education</string>
    <string name="str_txt_intro">Welcome to Studentz!</string>
    <string name="str_txt_contact">Contact</string>
<!--    <string name="str_txt_info" />-->
    <string name="str_txt_warning">Important message!</string>
    <string name="str_txt_title_students">Students</string>
    <string name="str_txt_titleAddStudent">Add Student</string>
    <string name="str_txt_titlecontact">Contact</string>
    <string name="str_txt_contact_us">Contact us</string>
    <string name="str_url_ehb">https://www.erasmushogeschool.be/en/contact</string>
    <string name="str_txt_ehbphone">Phone number</string>
    <string name="str_txt_kaaiehbphone" translatable="false">02 523 37 37</string>
    <string name="str_search_hint">Search student</string>
</resources>