<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--ref: https://www.geeksforgeeks.org/bottomnavigationview-inandroid/-->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/str_bottom_home"/>
    <item
        android:id="@+id/nav_student"
        android:icon="@drawable/ic_baseline_person_add_alt_1_24"
        android:title="@string/str_bottom_addstudent"/>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_baseline_contact_page_24"
        android:title="@string/str_txt_contact"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/str_bottom_settings"/>
</menu>